<resources>
    <string name="app_name">RickAndMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello">HELLO!</string>
    <string name="welcome">WELCOME!</string>
    <string name="status">Status:</string>
    <string name="gender">Gender:</string>
    <string name="specy">Specy:</string>
    <string name="origin">Origin:</string>
    <string name="location">Location:</string>
    <string name="episodes">Episodes:</string>
    <string name="created">Created at\n(in API):</string>

    <string name="error_internet_connection">You do not have an Internet connection!</string>,

</resources>